# API-Market

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.ja.md  README.md  README.zh.md  SECURITY.md  docker-compose.yml  frontend.Dockerfile  index.html  index.txt  pyproject.toml  pytest.ini  quality-report.json  robots.txt  search-index.json  server.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data_issue.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  daily-update.yml  dependency-review.yml  gitleaks.yml  lychee.yml  pages.yml  privacy-guard.yml  scorecard.yml  security-audit.yml
404/: index.html
apis/: analytics.json  animals.json  anime.json  anti-malware.json  art-design.json  auth.json  blockchain.json  books.json  business.json  calendar.json  ci.json  cloud-storage.json  collaboration.json  cryptocurrency.json  currency.json  data-validation.json  development.json  dictionaries.json  documents.json  education.json  email.json  entertainment.json  environment.json  events.json  finance.json  food-drink.json  games-comics.json  geocoding.json  government.json  health.json  iot.json  jobs.json  machine-learning.json  media.json  music.json  news.json  open-data.json  open-source.json  other.json  patent.json  (+20 more)
backend/api_market/: __init__.py  config.py  database.py  limiter.py  main.py
backend/tests/: conftest.py  test_apis.py  test_categories.py  test_health.py  test_search.py
categories/: index.html  index.txt
categories/animals/: index.html  index.txt
categories/blockchain/: index.html  index.txt
categories/books/: index.html  index.txt
categories/calendar/: index.html  index.txt
categories/cloud-storage/: index.html  index.txt
categories/cryptocurrency/: index.html  index.txt
categories/currency/: index.html  index.txt
categories/data-validation/: index.html  index.txt
categories/development/: index.html  index.txt
categories/dictionaries/: index.html  index.txt
categories/documents/: index.html  index.txt
categories/email/: index.html  index.txt
categories/entertainment/: index.html  index.txt
categories/environment/: index.html  index.txt
categories/finance/: index.html  index.txt
categories/food-drink/: index.html  index.txt
categories/games-comics/: index.html  index.txt
categories/geocoding/: index.html  index.txt
categories/government/: index.html  index.txt
categories/health/: index.html  index.txt
categories/iot/: index.html  index.txt
categories/jobs/: index.html  index.txt
categories/machine-learning/: index.html  index.txt
categories/music/: index.html  index.txt
categories/news/: index.html  index.txt
categories/open-data/: index.html  index.txt
categories/open-source/: index.html  index.txt
categories/other/: index.html  index.txt
categories/patent/: index.html  index.txt
categories/payment/: index.html  index.txt
categories/personality/: index.html  index.txt
categories/phone/: index.html  index.txt
data/: categories.json  manifest.json  top.json
data/category/: email.json  (+23 more)
docker/: nginx.conf
docs/: deploy-render.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
pipeline/: collector.py
scripts/: build_static_data.py  cleanup_database.py  migrate_to_sqlite.py  pipeline.py  privacy_check.sh  requirements.txt  validate.py  validate_data.py
search/: index.html  index.txt
stats/: index.html  index.txt
(+146 files in other folders)
