[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-market"
version = "5.0.0"
description = "A comprehensive collection of 14,000+ public APIs - Unified, Standardized, Searchable"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "API-Market Community" },
]
keywords = ["api", "rest-api", "public-apis", "api-directory", "open-data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.0",
    "types-redis>=4.6.0",
    "httpx>=0.27.0",
]

pipeline = [
    "asyncio-throttle>=1.0.2",
    "aiofiles>=24.1.0",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.0",
    # collector.py also imports httpx + tenacity at module load, so
    # they must be declared here (dev's httpx is a separate group).
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "node_modules",
    "scripts/validate_data.py",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I",
    "N", "UP", "B", "C4",
    "SIM", "RUF",
]
ignore = [
    "E501",
    "B008",
    "E701",
    "E712",
    "B905",
    "SIM108",
    "SIM105",
    "TC001",
    "TC002",
    "TC003",
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
known-first-party = ["api_market"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=backend/api_market",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.coverage.run]
source = ["backend/api_market"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["backend/api_market"]